--- a/app/html/parts/_footer.html
+++ b/app/html/parts/_footer.html
@@ -2,7 +2,7 @@
   <h2 class="sr-only">Contact information</h2>
 
   <div class="container">
-    <div class="footer__wrapper">
+    <div class="footer__wrapper @@if(context.isShop){footer__wrapper--shop}">
       <div class="footer__addres">
         <a class="logo logo--footer" href="#">
           <img class="logo__img" src="images/icons/logo.svg" alt="logo">
@@ -114,3 +114,8 @@
     </div>
   </div>
 </footer>
+
+<script defer src="js/main.min.js"></script>
+</body>
+
+</html>
