--- a/app/html/parts/_pagination.html
+++ b/app/html/parts/_pagination.html
@@ -9,6 +9,8 @@
     <li class="pagination__item">
       <a href="#" class="pagination__link" href="#">3</a>
     </li>
+    <li class="pagination__item">
+      <a href="#" class="pagination__link" href="#">Next</a>
+    </li>
   </ul>
-  <a class="pagination__arrows pagination__arrows--next" href="#">Next</a>
 </div>
