--- a/app/html/parts/_breadcrumbs.html
+++ b/app/html/parts/_breadcrumbs.html
@@ -1,19 +1,21 @@
-<section class="top">
-  <div class="top__wrapper">
-    <h2 class="top__title">@@title</h2>
+<section class="breadcrumbs">
+  <div class="container">
+    <h2 class="breadcrumbs__title">@@title</h2>
 
-    <div class="breadcrumbs">
+    <div class="breadcrumbs__inner">
       <ul class="breadcrumbs__list">
-        <li class="breadcrumbs__item">
-          <a class="breadcrumbs__link" href="#">
-            @@breadCrumbs.first
-          </a>
-        </li>
-        <li class="breadcrumbs__item">
-          <a class="breadcrumbs__link" href="#">
-            @@breadCrumbs.second
-          </a>
-        </li>
+        @@for(var i = 0; i < arr.length; i++) { 
+          <li class="breadcrumbs__item">
+            <a class="breadcrumbs__link" href="`+context.arr[i].link+`">
+              `+arr[i].crumb+`
+            </a>
+          </li>
+          }
+          <li class="breadcrumbs__item">
+            <span class="breadcrumbs__link">
+              @@crumbsCurrent
+            </span>
+          </li>
       </ul>
     </div>
   </div>
