--- a/app/html/parts/_partners.html
+++ b/app/html/parts/_partners.html
@@ -1,6 +1,6 @@
 <div class="partners">
   <div class="container">
-    <ul class="partners__slider">
+    <ul class="partners__slider @@if(context.isModified){partners__slider--modified}">
       <li class="partners__item">
         <a class="partners__link" href="#">
           <img class="partners__img" src="images/partners/partners-img-1.png" alt="Peterson Stephanie">
@@ -33,7 +33,7 @@
 
       <li class="partners__item">
         <a class="partners__link" href="#">
-          <img class="partners__img" src="images/partners/partners-img-1.png" alt="The Vintage">
+          <img class="partners__img" src="images/partners/partners-img-1.png" alt="Peterson Stephanie">
         </a>
       </li>
     </ul>
