--- a/app/html/page.html
+++ b/app/html/page.html
@@ -1,222 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
+@@include('./_head.html', {
+'titleTag': 'Glee — Blog page',
+})
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Glee — Home page</title>
-  <link rel="icon" href="images/favicon/favicon.ico">
-  <link rel="stylesheet" href="css/style.min.css">
-</head>
+@@include('./_header.html', {
+'current': 'header__link--current',
+'page': 'blog-page'
+})
 
-<body>
-  <header class="header">
-    <div class="container container--lg">
-      <nav class="header__navigation">
-        <a class="logo logo--header" href="#">
-          <img class="logo__img" src="images/icons/logo.svg" alt="logo">
-        </a>
+<main class="main">
+  <h1 class="sr-only"></h1>
 
-        <button class="header__close" type="button">
-          <span class="sr-only">Close menu</span>
-          <svg>
-            <use xlink:href="images/icons/sprite.svg#close-btn"></use>
-          </svg>
-        </button>
+  
 
-        <ul class="header__menu">
-          <li class="header__item">
-            <a class="header__link" href="#">Home+</a>
-          </li>
-          <li class="header__item">
-            <a class="header__link" href="#">About</a>
-          </li>
-          <li class="header__item">
-            <a class="header__link" href="#">Services</a>
-          </li>
-          <li class="header__item">
-            <a class="header__link" href="#">Pages+</a>
-          </li>
-          <li class="header__item">
-            <a class="header__link" href="#">News</a>
-          </li>
-          <li class="header__item">
-            <a class="header__link" href="#">Contact</a>
-          </li>
-        </ul>
 
-        <div class="header__tools">
-          <button class="header__tool header__tool--search" type="button">
-            <span class="sr-only">Open search box</span>
-            <svg>
-              <use xlink:href="images/icons/sprite.svg#header-search"></use>
-            </svg>
-          </button>
 
-          <div class="header__box">
-            <a class="header__tool header__tool--heart" href="#">
-              <span class="sr-only">Open favorites</span>
-              <div class="header__wrap">
-                <svg>
-                  <use xlink:href="images/icons/sprite.svg#header-heart"></use>
-                </svg>
-                <span class="header__num">0</span>
-              </div>
-            </a>
+  @@include('./_partners.html')
+</main>
 
-            <a class="header__tool header__tool--cart" href="#">
-              <span class="sr-only">Open cart</span>
-              <div class="header__wrap">
-                <svg>
-                  <use xlink:href="images/icons/sprite.svg#header-cart"></use>
-                </svg>
-                <span class="header__num">0</span>
-              </div>
-            </a>
-          </div>
-
-          <button class="header__tool header__tool--more" type="button">
-            <span class="sr-only">Open additional menu</span>
-            <svg>
-              <use xlink:href="images/icons/sprite.svg#header-more"></use>
-            </svg>
-          </button>
-
-          <button class="header__tool header__tool--burger" type="button">
-            <span class="sr-only">Open menu</span>
-            <svg>
-              <use xlink:href="images/icons/sprite.svg#menu"></use>
-            </svg>
-          </button>
-        </div>
-      </nav>
-    </div>
-    <div class="header__overlay"></div>
-  </header>
-
-  <main class="main">
-
-  </main>
-
-  <footer class="footer">
-    <h2 class="sr-only">Contact information</h2>
-
-    <div class="container">
-      <div class="footer__wrapper">
-        <div class="footer__addres">
-          <a class="logo logo--footer" href="#">
-            <img class="logo__img" src="images/icons/logo.svg" alt="logo">
-          </a>
-
-          <address class="contacts">
-            <ul class="contacts__items">
-              <li class="contacts__item">
-                <span class="contacts__to">Address:</span>
-                <a class="contacts__link" href="#">
-                  4772 Wines Lane Houston, TX 77032
-                </a>
-              </li>
-
-              <li class="contacts__item">
-                <span class="contacts__to">Telephone:</span>
-                <a class="contacts__link" href="tel:+8323475843">
-                  +832-347-5843
-                </a>
-              </li>
-
-              <li class="contacts__item">
-                <span class="contacts__to">Email:</span>
-                <a class="contacts__link" href="mailto:contact@Glee.com">
-                  contact@Glee.com
-                </a>
-              </li>
-            </ul>
-          </address>
-        </div>
-
-        <div class="footer__inner">
-          <h3 class="footer__title">Services</h3>
-
-          <ul class="footer__items">
-            <li class="footer__item">
-              <a class="footer__link" href="#">About us</a>
-            </li>
-            <li class="footer__item">
-              <a class="footer__link" href="#">Return Policy</a>
-            </li>
-            <li class="footer__item">
-              <a class="footer__link" href="#">Our Blog</a>
-            </li>
-            <li class="footer__item">
-              <a class="footer__link" href="#">Contact Us</a>
-            </li>
-            <li class="footer__item">
-              <a class="footer__link" href="#">Terms & Condition</a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="footer__inner">
-          <h3 class="footer__title">Account</h3>
-
-          <ul class="footer__items">
-            <li class="footer__item">
-              <a class="footer__link" href="#">Your Account</a>
-            </li>
-            <li class="footer__item">
-              <a class="footer__link" href="#">Checkout</a>
-            </li>
-            <li class="footer__item">
-              <a class="footer__link" href="#">Login</a>
-            </li>
-            <li class="footer__item">
-              <a class="footer__link" href="#">Register</a>
-            </li>
-          </ul>
-        </div>
-
-        <div class="footer__inner">
-          <h3 class="footer__title">Newsletter</h3>
-
-          <div class="footer__items">
-            <p>Subscribe by our newsletter and get update protidin.</p>
-            <form class="form">
-              <div class="form__group">
-                <input class="form__input" type="email" id="input-mail">
-                <label class="form__label" for="input-mail">Email address</label>
-              </div>
-              <button class="form__btn" type="submit">Subscribe</button>
-            </form>
-          </div>
-        </div>
-      </div>
-
-      <div class="footer__bottom">
-        <div class="footer__copy">
-          <p>©2020 CopyRight Example. All rights reserved.</p>
-        </div>
-        <nav class="footer__nav">
-          <ul class="footer__links">
-            <li class="footer__elem">
-              <a class="footer__ref" href="#">Home</a>
-            </li>
-            <li class="footer__elem">
-              <a class="footer__ref" href="#">About</a>
-            </li>
-            <li class="footer__elem">
-              <a class="footer__ref" href="#">Blog</a>
-            </li>
-            <li class="footer__elem">
-              <a class="footer__ref" href="#">Contact</a>
-            </li>
-          </ul>
-        </nav>
-      </div>
-    </div>
-  </footer>
-
-  <script defer src="js/main.min.js"></script>
-</body>
-
-</html>
+@@include('./_footer.html', {
+'isModified': false
+})
