--- a/app/html/parts/about-us/_team-employee.html
+++ b/app/html/parts/about-us/_team-employee.html
@@ -12,7 +12,7 @@
     <ul class="team__socials">
       <li class="team__item">
         <a class="team__link" href="@@link-inst">
-          <span class="sr-only">@@sronly-inst</span>
+          <span class="sr-only">to Instagram account</span>
           <svg>
             <use xlink:href="images/icons/sprite.svg#inst"></use>
           </svg>
@@ -21,7 +21,7 @@
 
       <li class="team__item">
         <a class="team__link" href="@@link-gplus">
-          <span class="sr-only">Goggle+</span>
+          <span class="sr-only">to Goggle+ account</span>
           <svg>
             <use xlink:href="images/icons/sprite.svg#g+"></use>
           </svg>
