--- a/app/html/parts/_header.html
+++ b/app/html/parts/_header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="container container--lg">
     <nav class="header__navigation">
-      <a class="logo logo--header" href="#">
+      <a class="logo logo--header" href="index.html">
         <img class="logo__img" src="images/icons/logo.svg" alt="logo">
       </a>
 
@@ -14,22 +14,22 @@
 
       <ul class="header__menu">
         <li class="header__item">
-          <a class="header__link header__link--modified @@if(context.name === 'current' && context.page === 'home-page'){@@current}" href="index.html">Home</a>
+          <a class="header__link header__link--modified @@if(context.name === 'current' && context.page === 'home-page'){header__link--current}" href="index.html">Home</a>
         </li>
         <li class="header__item">
-          <a class="header__link @@if(context.name === 'current' && context.page === 'about-us'){@@current}" href="about-us.html">About</a>
+          <a class="header__link @@if(context.name === 'current' && context.page === 'about-us'){header__link--current}" href="about-us.html">About</a>
         </li>
         <li class="header__item">
-          <a class="header__link @@if(context.name === 'current' && context.page === 'shop-page'){@@current}" href="shop-page.html">Services</a>
+          <a class="header__link @@if(context.name === 'current' && context.page === 'shop-page'){header__link--current}" href="shop-page.html">Services</a>
         </li>
         <li class="header__item">
-          <a class="header__link header__link--modified @@if(context.name === 'current' && context.page === 'blog-page'){@@current}" href="blog-page.html">Pages</a>
+          <a class="header__link header__link--modified @@if(context.name === 'current' && context.page === 'blog-page'){header__link--current}" href="blog-page.html">Pages</a>
         </li>
         <li class="header__item">
           <a class="header__link" href="#">News</a>
         </li>
         <li class="header__item">
-          <a class="header__link" href="#">Contact</a>
+          <a class="header__link @@if(context.name === 'current' && context.page === 'contacts'){header__link--current}" href="contacts.html">Contact</a>
         </li>
       </ul>
 
